--- a/Parser/packages.config
+++ b/Parser/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable45-net45+win8+wp8" />
+  <package id="XLabs.IoC.Autofac" version="2.0.5782" targetFramework="portable45-net45+win8+wp8" />
 </packages>
